--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "06-notehub-nextjs",
+  "name": "06-nutehub-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.89.0",
-    "axios": "^1.12.2",
+    "@tanstack/react-query": "^5.85.3",
+    "axios": "^1.11.0",
+    "cookie": "^1.0.2",
     "formik": "^2.4.6",
-    "next": "15.5.3",
-    "prettier": "^3.6.2",
+    "next": "^15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-paginate": "^8.3.0",
-    "use-debounce": "^10.0.6",
+    "use-debounce": "^10.0.5",
     "yup": "^1.7.0",
     "zustand": "^5.0.8"
   },
@@ -27,8 +27,9 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "15.4.6",
     "eslint-config-prettier": "^10.1.8",
+    "prettier": "^3.6.2",
     "typescript": "^5"
   }
 }
